[package]
name = "anyshortcut-cli"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
description="A blaze fast way to launch your favorite website in Terminal."
homepage = "https://github.com/anyshortcut/anyshortcut-cli"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
clap = "2.31.2"
curl = "0.4.12"
open = "1.2.1"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"