[package]
name = "anyshortcut-cli"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
description="A blaze fast way to launch your favorite website in Terminal."
homepage = "https://github.com/anyshortcut/anyshortcut-cli"
build="build.rs"

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
clap = "2.32.0"
open = "1.2.2"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
chrono = "0.4.5"
ansi_term = "0.11.0"

curl-http = { path = "../curl-http" }

[dev-dependencies]
itertools = "0.7.8"

[build-dependencies]
clap="2.32.0"